# norima

./: README.md  hi.norm  pyproject.toml
compiler/: README.md
compiler/grammar/: norima_tree_sitter.json
dev/: README.md  server.py
docs/: LANGUAGE_SPEC.md  ROADMAP.md
examples/: README.md  hello.norm  hello_world.norm
lsp/: README.md
noodle/: README.md
runtime/: README.md
stdlib/: README.md
tools/: __init__.py
tools/file-associations/: norima-mime.xml
tools/hem/: __init__.py  cli.py  hem  install_hem.sh  uninstall_hem.sh
tools/noodle/: cli.py  install_noodle.sh  uninstall_noodle.sh
tools/norima/: cli.py
vm/: README.md  interpreter.py  parser.py  runtime.py
vscode-extension/: ICON_README.md  NOTES.md  README.md  language-configuration.json  package.json
vscode-extension/client/: extension.js
vscode-extension/icons/: icon-theme.json
